--- a/Chess3D/Assembly-CSharp.csproj
+++ b/Chess3D/Assembly-CSharp.csproj
@@ -56,6 +56,7 @@
      <Compile Include="Assets\scripts\Case.cs" />
      <Compile Include="Assets\scripts\EventManager.cs" />
      <Compile Include="Assets\scripts\GameManager.cs" />
+     <Compile Include="Assets\scripts\Move.cs" />
      <Compile Include="Assets\scripts\Pieces\Bishop.cs" />
      <Compile Include="Assets\scripts\Pieces\King.cs" />
      <Compile Include="Assets\scripts\Pieces\Knight.cs" />
